--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,7 +3,7 @@
   background: papayawhip;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content:center;
 }
 
 .logo {
@@ -17,6 +17,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
 }
 
 a {
@@ -25,4 +26,10 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
