add margin to list items

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -21,6 +21,7 @@ ul {
   list-style-type: none;
   display: flex;
   
+  
 }
 
 a {
@@ -29,5 +30,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  
-}
+  margin: 16px;
+  }
