add margin to logo, center items horizontally

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content:space-around;
+  align-items: center;
 
 }
 
@@ -14,6 +15,7 @@
   background: white;
   padding: 4px 32px;
   align-self: center;
+  margin: 8px;
 }
 
 ul {
