remove padding from ul element

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -22,8 +22,15 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  padding: 0;
   
   
+}
+.right-links {
+  margin-left: auto;
+}
+.left-links {
+  margin-right: auto;
 }
 
 a {
