--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,6 +13,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -35,8 +36,7 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
-  
+  padding: 8px 24px
 }
 
 a {
@@ -47,4 +47,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
+  margin-left: auto;
+  gap: 16px;
+}
+
+.left {
+  display: flex;
 }
