push links to either side with space between

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -29,9 +29,13 @@ input {
   margin-bottom: 16px;
 }
  .header {
+  justify-content: space-between;
+  display: flex;
   padding: 16px;
  }
 
  .footer {
+  display: flex;
+  justify-content: space-between;
   padding: 16px;
  }
