center logo, input and buttons

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -41,6 +41,11 @@ input {
   background-color: #eeeeee;
  }
 
+ .content {
+  align-self: center;
+  text-align: center;
+ }
+
  ul {
   display: flex;
   gap: 16px;
